# PDC

./: .gitignore  CMakeLists.txt  build.sh
cmake-modules/: Fetch_Eigen3.cmake  Fetch_h5pp.cmake
data/: found_7.data  found_parallel.data  helloworld.txt  out.stl
slurm/: run.sh  submit-cuda
src/: game_of_life-parallel.cpp  hello_mpi.cpp  lab01_ex1.cu  lab01_ex2.cu  lab02_ex3_6.cu  main.cpp  mpi_derived_types.cpp  mpi_derived_types_parallel.cpp  ommult.cpp  parallel_search-parallel.cpp  parallel_search-serial.c  pass_baton.cpp  pi_parallel.cpp  pi_serial.cpp
src/math/: nmspc_tensor_extra.h
src/shwater2d/: shwater2d_modern.cpp  shwater2d_modern.h  shwater2d_original.cpp  shwater2d_original.h
src/stats/: stats.cpp  stats.h
tests/hello/: CMakeLists.txt  hello.cpp
